Updating the API according to new specs.
