# app/api/api-docs.yml
@@ -33,8 +33,8 @@ paths:
               schema:
                 $ref: "#/components/schemas/Blockchain"
   /transaction:
-    post:
-      summary: Receives a new transaction
+    put:
+      summary: Receives a new transaction from another node, to synchronize the network
       operationId: postTransaction
       tags:
         - blockchain
@@ -58,9 +58,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/SchemaErrors"
-  /transaction/broadcast:
     post:
-      summary: Receives a new transaction and broadcasts it for the network nodes
+      summary: Add a new transaction to network, broadcasting it for the other nodes
       operationId: postTransactionBroadcast
       tags:
         - blockchain
@@ -107,8 +106,8 @@ paths:
         '404':
           description: Transaction not found
   /block:
-    post:
-      summary: Receives a new block
+    put:
+      summary: Receives a new block from another node, to synchronize the network
       operationId: postBlock
       tags:
         - blockchain
@@ -213,7 +212,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Network"
-  /network/broadcast:
+  /network/nodes:
     post:
       summary: Registers new nodes and broadcast them
       operationId: postNetworkBroadcast
@@ -235,9 +234,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/SchemaErrors"
-  /network/register:
-    post:
-      summary: Registers new nodes
+    put:
+      summary: Receives new nodes from another node, to synchronize the network
       operationId: postNetworkRegister
       tags:
         - network
