# app/api/endpoints.mjs
@@ -2,15 +2,15 @@ export default {
   GET_INDEX: "/",
   GET_BLOCKCHAIN: "/blockchain",
   POST_TRANSACTION: "/transaction",
-  POST_TRANSACTION_BROADCAST: "/transaction/broadcast",
+  PUT_TRANSACTION: "/transaction",
   GET_TRANSACTION: "/transaction/:id",
-  POST_BLOCK: "/block",
+  PUT_BLOCK: "/block",
   GET_BLOCK: "/block/:hash",
   POST_MINE: "/mine",
   POST_CONSENSUS: "/consensus",
   GET_NETWORK: "/network",
-  POST_NETWORK_BROADCAST: "/network/broadcast",
-  POST_NETWORK_REGISTER: "/network/register",
+  POST_NODES: "/network/nodes",
+  PUT_NODES: "/network/nodes",
   GET_BALANCE: "/balance/:address",
   GET_SWAGGER: "/api-docs"
 }
